--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 .container{
     display: grid;
     grid-template-columns: repeat(9, 1fr);
@@ -15,7 +16,7 @@
     grid-column: 1 / 3;
     grid-row: 1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
     
     
 
@@ -24,13 +25,12 @@
     color: #F4F4F4;
     font-weight: bold;
     position: relative;
-    right: 7%;
 }
 .content2{
     grid-column: 3 / 4;
     grid-row: 1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
     transition: 0.3s;
 
 }
@@ -38,14 +38,14 @@
     grid-column:4 / 5;
     grid-row: 1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
     transition: 0.3s;
 }
 .content4{
     grid-column: 5 / 6;
     grid-row: 1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
     transition: 0.3s;
 
 }
@@ -53,23 +53,23 @@
     grid-column: 6 / 7;
     grid-row: 1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
     transition: 0.3s;
 }
 .content6{
     grid-column: 7 / 8 ;
     grid-row:1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
     transition: 0.3s;
 }
 .content7{
     grid-column: 8 / 10;
     grid-row: 1;
     background-color: #18A0FB;
-    padding: 1.3em;
+    padding: 1.3em 0;
 }
-a{
+.container a{
     text-decoration: none;
     color:#F4F4F4
 }
@@ -81,12 +81,79 @@ a{
 .content2:active,.content3:active,.content4:active,.content5:active,.content6:active{
     opacity:70%;
 }
-@media only screen and (max-width:600px) {
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-gap: 0;
+    text-align: center;
+    background-color: white;
+    padding: 1rem 0;
+}
+.bloc1{
+    position: relative;
+    grid-column: 2/9;
+    padding: 20rem 0;
+    grid-row: 2;
+    background-color:#F4F4F4;
+    opacity: 80%;
+    border-radius: 5px;
+
+}
+
+.bloc2{
+    grid-column: 1/10;
+    grid-row: 1;
+    background-color: white;
+    color: #444;
+}
+
+
+button{
+    
+    border-radius: 3px;
+    padding: 5px 0px;
+    border-color: black;
+    border: solid;
+    
+}
+footer{
+    position: relative;
+    background-color: #18A0FB;
+    padding: 1rem 0;
+    width: 100%;
+    bottom: 0%;
+    text-align: center;
+}
+footer p{
+
+    color:#F4F4F4;
+}
+/* .white{
+    background-color:white;
+    padding: 1rem;
+} */
+
+::-webkit-scrollbar{
+    width: 3px;
+}
+
+::-webkit-scrollbar-thumb{
+    background: rgb(0, 119, 255);
+    border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background:blue;
+}
+
+@media only screen and (max-width:500px) {
     .content1{
         grid-column:1/10;
+        justify-content: center;
     }
     .content2,.content3,.content4,.content5,.content6,.content7{
         visibility: hidden;
     }
-    
+    footer{
+        position: fixed;
+    }
 }
