--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,82 +4,43 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.container{
-    display: grid;
-    grid-template-columns: repeat(9, 1fr);
-    grid-gap: 0;
-    
-    text-align: center;
-}
-
-.content1{
-    grid-column: 1 / 3;
-    grid-row: 1;
+header{
+    display: flex;
+    align-items: center;
+    height: 6vh;
     background-color: #18A0FB;
-    padding: 1.3em 0;
-    
-    
-
 }
-.content1 p{
-    color: #F4F4F4;
-    font-weight: bold;
-    position: relative;
+header ul{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 7em;
 }
-.content2{
-    grid-column: 3 / 4;
-    grid-row: 1;
-    background-color: #18A0FB;
-    padding: 1.3em 0;
-    transition: 0.3s;
-
+header ul li{
+    flex-grow: 0.2;
 }
-.content3{
-    grid-column:4 / 5;
-    grid-row: 1;
-    background-color: #18A0FB;
-    padding: 1.3em 0;
-    transition: 0.3s;
-}
-.content4{
-    grid-column: 5 / 6;
-    grid-row: 1;
-    background-color: #18A0FB;
-    padding: 1.3em 0;
-    transition: 0.3s;
-
-}
-.content5{
-    grid-column: 6 / 7;
-    grid-row: 1;
-    background-color: #18A0FB;
-    padding: 1.3em 0;
-    transition: 0.3s;
-}
-.content6{
-    grid-column: 7 / 8 ;
-    grid-row:1;
-    background-color: #18A0FB;
-    padding: 1.3em 0;
-    transition: 0.3s;
-}
-.content7{
-    grid-column: 8 / 10;
-    grid-row: 1;
-    background-color: #18A0FB;
-    padding: 1.3em 0;
-}
-.container a{
+header ul li a{
+    border-radius: 4px;
+    padding: 0.5vh 1vh 0.7vh;
+    transition-duration: 0.4s;
     text-decoration: none;
     color:#F4F4F4
 }
-.content2:hover,.content3:hover,.content4:hover,.content5:hover,.content6:hover{
-    cursor: pointer;
-    opacity: 90%;
+header ul li a:hover{
+    background-color: #77bdeb;
+    transition-duration: 0.7s;
 }
 
-.content2:active,.content3:active,.content4:active,.content5:active,.content6:active{
-    opacity:70%;
+.logo{
+    /* flex-grow: 1.5; */
+    background-color: #18A0FB;
+    padding: 0 2em;
+}
+.logo p{
+    color: #F4F4F4;
+    font-weight: bold;
+    position: relative;
 }
 .wrapper{
     display: grid;
@@ -92,12 +53,19 @@
 .bloc1{
     position: relative;
     grid-column: 2/9;
-    padding: 20rem 0;
+    height: 85.1vh;
     grid-row: 2;
     background-color:#F4F4F4;
     opacity: 80%;
     border-radius: 5px;
+}
 
+ul, ol{
+    list-style: none;
+}
+
+table, form{
+    margin: 5vh auto 0;
 }
 
 .bloc2{
